JP-221 fixed mentee filters fields alignment

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -31,7 +31,8 @@ $line-height-base: 1.6;
 $text-color: #1b1d1e;
 
 //$form-placeholder-color: #555555;
-$form-placeholder-color: #777777;
+//$form-placeholder-color: #777777;
+$form-placeholder-color: #999;
 $form-placeholder-color-light: #bbbbbb;
 $form-placeholder-font-size:12px;
 
