--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -529,6 +529,15 @@
   .filterName {
     margin-top: 10px;
   }
+  .inputer {
+    margin-top: 5px;
+  }
+  .chosen-container {
+    margin-top: 12px;
+  }
+  .chosen-container .chosen-default span, .chosen-container-single .chosen-single {
+    font-size: 18px;
+  }
 }
 
 .margin-top-100 {
